[package]
name = "json-search"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.107", features = ["derive"], optional = true }
serde_json = "1.0.107"
thiserror = "1.0.49"

[features]
default = ["serde"]
serde = ["dep:serde"]
